# CTFd-Admin-MCP

./: LICENSE  README.md  pyproject.toml  server.py
