[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctfd-admin-mcp"
version = "0.1.0"
description = "MCP server for administering a CTFd instance"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
ctfd-admin-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
